# deepscanning

./: .gitignore  ABACUS_results.ipynb  CMakeLists.txt  Doxyfile  LiebLin_Rho_Rho_c_1_L_11_N_11_11_0__iKmin_-40_iKmax_40.fsr  LiebLin_Rho_Rho_c_1_L_11_N_11_11_0__iKmin_-40_iKmax_40.raw  LiebLin_Rho_Rho_c_1_L_5_N_5_5_0__iKmin_-12_iKmax_12.fsr  LiebLin_Rho_Rho_c_1_L_5_N_5_5_0__iKmin_-12_iKmax_12.raw  Makefile  Q-learning_results.ipynb  README.md  calculate_dsf.py  deep_q_learning.py  deepscanning.ipynb  displacement.cpp  exact.ipynb  experimental_data.txt  experiments.ipynb  experiments.py  explore_state_space.ipynb  lieb_liniger_state.py  predict_rapidities.ipynb  rho_form_factor.py  sum_rule.py  utils.py  visualize.py
docs/: Doxyfile
include/: constants.hpp  lieb_liniger_state.hpp  machine_learning.hpp
python/: deep_q_learning.py  exact.ipynb  explore_state_space.ipynb  explore_state_space.py  lieb_liniger_state.py  matrix_element.py  predict_rapidities.ipynb  predict_rapidities.py  psi_form_factor.py  removed_cnn.py  rho_form_factor.py  sum_rule.py  tree_search.py  utils.py
src/: CMakeLists.txt  lieb_liniger_state.cpp  machine_learning.cpp  main.cpp
test/: CMakeLists.txt  test_lieb_liniger_state.cpp
